--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       JDBC_HOST: ig-dbpostgresql
       APP_ARGUMENTS: >
         -Dserver.port=8080
+        -Dlogging.level.org.springframework.web=${LOG_LEVEL}
     ports:
       - "80:8080"
     depends_on:
