--- a/instagram-client/pom.xml
+++ b/instagram-client/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.simple-http</groupId>
+            <artifactId>simple-http</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
