--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     external_links:
       - ig-dbpostgresql:dbpostgresql
     volumes:
-      - /opt/instagram-client/data
+      - /opt/instagram-client/data:/instagram/data
     environment:
       IG_USERNAME: ${IG_USERNAME}
       IG_PASSWORD: ${IG_PASSWORD}
